--- a/case-technology-roadmap-portfolio-advisory.html
+++ b/case-technology-roadmap-portfolio-advisory.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Designing Enterprise Cloud Landing Zones — Insight</title>
+  <title>Technology Roadmapping & Portfolio Advisory — Case Study</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="description" content="Insight: Designing Enterprise Cloud Landing Zones" />
+  <meta name="description" content="Case study: Technology Roadmapping & Portfolio Advisory." />
   <meta name="theme-color" content="#0ea5e9" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -69,26 +69,36 @@
   </div>
 
   
-<main id="main" class="container">
-  <a class="case-back" href="index.html#blog">← Back to Insights</a>
-  <h1>Designing Enterprise Cloud Landing Zones</h1>
-  <p class="subtitle">Principles for scalable, governed, secure cloud foundations</p>
-<section aria-labelledby="overviewTitle">
-  <h2 id="overviewTitle">Overview</h2>
-  <p>This article outlines key principles for designing enterprise cloud landing zones that scale with governance and security built in.</p>
-</section>
-<section aria-labelledby="keyprinciplesTitle">
-  <h2 id="keyprinciplesTitle">Key Principles</h2>
+<main id="main" class="container case-page">
+  <a class="case-back" href="index.html#work">← Back to Strategic Initiatives</a>
+  <h1>Technology Roadmapping & Portfolio Advisory</h1>
+  <p class="subtitle">Target State | Sequencing | Governance Cadence</p>
+  <div class="case-tags" aria-label="Tags"><span class="case-tag">Target state</span><span class="case-tag">Sequencing</span><span class="case-tag">Governance cadence</span></div>
+<section aria-labelledby="contextTitle">
+  <h2 id="contextTitle">Context</h2>
   <ul>
-    <li>Separation of concerns (identity, network, management)</li><li>Policy-as-code guardrails</li><li>Standardised onboarding patterns</li>
+    <li>Multiple initiatives required sequencing, dependency clarity, and alignment to business priorities.</li><li>Stakeholders needed visibility into dependencies, investment themes, and a realistic target-state journey.</li>
   </ul>
 </section>
-<section aria-labelledby="wheretostartTitle">
-  <h2 id="wheretostartTitle">Where to start</h2>
+<section aria-labelledby="myroleTitle">
+  <h2 id="myroleTitle">My Role</h2>
   <ul>
-    <li>Define target-state and operating model</li><li>Establish baseline controls and observability</li><li>Publish reusable templates and guidance</li>
+    <li>Led portfolio-level architectural roadmapping and facilitated alignment across stakeholders.</li><li>Translated target state architecture into an executable multi-year plan with governance checkpoints.</li>
   </ul>
 </section>
+<section aria-labelledby="outcomesTitle">
+  <h2 id="outcomesTitle">Outcomes</h2>
+  <ul>
+    <li>Clear multi-year roadmap with measurable milestones</li><li>Transparency into sequencing and dependencies</li><li>Governance model to keep execution aligned</li>
+  </ul>
+</section>
+<nav class="case-nav" aria-label="Case study navigation">
+  <a class="case-prev" href="case-platform-engineering-self-service.html">
+    <span class="nav-kicker">Previous</span>
+    <span class="nav-title">Platform Engineering & Self-Service Enablement</span>
+  </a>
+  <div class="nav-spacer" aria-hidden="true"></div>
+</nav>
 </main>
 <script src="js/theme.js"></script>
 <script src="js/menu.js"></script>
